[package]
name = "amridge"
version = "0.1.0"
authors = ["PHPinnacle developers <dev@phpinnacle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
futures-util = "0.3.1"
tokio = { version = "0.2", features = ["full"] }

bytes = "0.5"
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5"
num_cpus = "1.11.1"
